# mvtools

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  PlaneOfBlocks.h  README.md  README_depans.txt  mvtools.sln
DePan/: CMakeLists.txt  DePan.vcxproj  Files.cmake  commonfunctions.h  def.h  depan.h  depan_compensate.cpp  depan_interface.cpp  depan_scenes.cpp  depan_stabilize.cpp  depan_transform.cpp  depanio.cpp  depanio.h  info.cpp  yuy2planes.cpp
DePanEstimate/: CMakeLists.txt  DePanEstimate.vcxproj  Files.cmake  def.h  depanio.cpp  depanio.h  estimate_fftw.cpp  estimate_fftw.h  fftwlite.h
Doc_Depan/: depan-rus.html  depan.html
Doc_DepanEstimate/: depan-rus.html  depan.html
Documentation/: avisynth-new.css  avisynth.css  gpl-rus.txt  mvtools-rus.html  mvtools.html  mvtools2-2.5.11.22.html  mvtools2-rus-2.5.11.22.html  mvtools2-rus.html  mvtools2.html
Sources/: AllocAlign.h  AllocAlign.hpp  AnaFlags.h  AvstpFinder.cpp  AvstpFinder.h  AvstpWrapper.cpp  AvstpWrapper.h  CMakeLists.txt  ClipFnc.cpp  ClipFnc.h  CopyCode.cpp  CopyCode.h  DCTClass.h  DCTFFTW.cpp  DCTFFTW.h  DCTFactory.cpp  DCTFactory.h  DCTINT.cpp  DCTINT.h  DePan.vcxproj  DePan.vcxproj.filters  DePanEstimate.vcxproj  DePanEstimate.vcxproj.filters  FakeBlockData.cpp  FakeBlockData.h  FakeGroupOfPlanes.cpp  FakeGroupOfPlanes.h  FakePlaneOfBlocks.cpp  FakePlaneOfBlocks.h  Files.cmake  GroupOfPlanes.cpp  GroupOfPlanes.h  Interface.cpp  Interlocked.cpp  Interpolation.cpp  Interpolation.h  MDegrainN.cpp  MDegrainN.h  MRestoreVect.cpp  MRestoreVect.h  (+127 more)
Sources/Win32/ReleaseWithDebugInfo/: AvstpFinder.asm  AvstpWrapper.asm  ClipFnc.asm  CopyCode.asm  DCTFFTW.asm  DCTFactory.asm  DCTINT.asm  FakeBlockData.asm  FakeGroupOfPlanes.asm  FakePlaneOfBlocks.asm  GroupOfPlanes.asm  Interface.asm  Interlocked.asm  Interpolation.asm  MDegrainN.asm  MRestoreVect.asm  MScaleVect.asm  MStoreVect.asm  MVAnalyse.asm  MVBlockFps.asm  MVClip.asm  MVCompensate.asm  MVDegrain1.asm  MVDegrain2.asm  MVDepan.asm  MVFilter.asm  MVFinest.asm  MVFlow.asm  MVFlowBlur.asm  MVFlowFps.asm  MVFlowInter.asm  MVFrame.asm  MVGroupOfFrames.asm  MVMask.asm  MVPlane.asm  MVRecalculate.asm  MVSCDetection.asm  MVShow.asm  MVSuper.asm  MaskFun.asm  (+15 more)
Sources/Win32/ReleaseWithDebugInfo/mvtools.tlog/: BscMake.command.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mvtools.lastbuildstate  mvtools.write.1u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Sources/asm/: Bilinear.asm  Bilinear_x64.asm  CopyCode-a.asm  Overlap-a.asm  SAD_iSSE.asm  SAD_iSSE_x64.asm  Variance-a.asm  cpu-a.asm  fdct_mmx.asm  fdct_mmx_x64.asm  memcpy_amd_asm.asm  memcpy_amd_asm_x64.asm  pixel-a.asm  sad-a.asm
Sources/asm/include/: x86inc.asm
Sources/conc/: AioAdd.h  AioAdd.hpp  AioMax.h  AioMax.hpp  AioSub.h  AioSub.hpp  Array.h  Array.hpp  AtomicInt.h  AtomicInt.hpp  AtomicIntOp.h  AtomicIntOp.hpp  AtomicMem.h  AtomicMem.hpp  AtomicPtr.h  AtomicPtr.hpp  AtomicPtrIntPair.h  AtomicPtrIntPair.hpp  CellPool.h  CellPool.hpp  CritSec.h  CritSec.hpp  Interlocked.h  Interlocked.hpp  Interlocked__.hpp  LockFreeCell.h  LockFreeQueue.h  LockFreeQueue.hpp  LockFreeStack.h  LockFreeStack.hpp  Mutex.h  Mutex.hpp  ObjFactoryDef.h  ObjFactoryDef.hpp  ObjFactoryInterface.h  ObjFactoryInterface.hpp  ObjPool.h  ObjPool.hpp  def.h  fnc.h  (+1 more)
Sources/fstb/: AllocAlign.h  AllocAlign.hpp  SingleObj.h  SingleObj.hpp  def.h
Sources/include/: avisynth.h
Sources/include/avs/: alignment.h  capi.h  config.h  cpuid.h  types.h  win.h
